force-app/main/default/objects/FieloEE__SiteGallery__c/FieloEE__SiteGallery__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Site Gallery</label>
</CustomObject>