force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__Catalog__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Catalog__c</fullName>
    <label>Catalog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>