force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__Color06__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Color06__c</fullName>
    <label>Color06</label>
    <length>10</length>
    <type>Text</type>
</CustomField>