force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__ColorFont04__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ColorFont04__c</fullName>
    <label>ColorFont04</label>
    <length>10</length>
    <type>Text</type>
</CustomField>