force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__CSS__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CSS__c</fullName>
    <label>CSS File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>