force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__Footer__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Footer__c</fullName>
    <label>Footer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>