force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__FooterBackgroundAttribute__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FooterBackgroundAttribute__c</fullName>
    <label>Footer Background attribute</label>
    <length>15</length>
    <type>Text</type>
</CustomField>