force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__FooterBackgroundId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FooterBackgroundId__c</fullName>
    <label>Footer Background Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>