force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__Header__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Header__c</fullName>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>