force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__HeaderBackgroundAttribute__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__HeaderBackgroundAttribute__c</fullName>
    <label>Header Background attribute</label>
    <length>15</length>
    <type>Text</type>
</CustomField>