force-app/main/default/objects/FieloEE__SiteGallery__c/fields/FieloEE__headerBackgroundId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__headerBackgroundId__c</fullName>
    <label>headerBackgroundId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>